--- a/index.html
+++ b/index.html
@@ -8,11 +8,11 @@
   <!-- Optional favicon -->
   <link rel="icon" type="image/png" href="logo.png">
 
-  <!-- Google Fonts -->
+  <!-- Google Font -->
   <link href="https://fonts.googleapis.com/css2?family=Great+Vibes&display=swap" rel="stylesheet">
 
   <style>
-    /* ===== Base layout ===== */
+    /* ===== Base Layout ===== */
     html, body {
       margin: 0;
       padding: 0;
@@ -21,26 +21,31 @@
       font-family: 'Poppins', sans-serif;
       color: white;
       background: linear-gradient(135deg, black, darkred);
+      overflow-x: hidden;
       display: flex;
       flex-direction: column;
       align-items: center;
       justify-content: flex-start;
-      overflow-x: hidden;
+      text-align: center;
       padding-top: 5vh;
     }
 
-    /* ===== Animated wave background ===== */
+    /* ===== Animated Background ===== */
     .flow-line {
       position: fixed;
-      top: 0; left: 0;
-      width: 100vw; height: 100vh;
+      top: 0;
+      left: 0;
+      width: 100vw;
+      height: 100vh;
       z-index: 0;
       pointer-events: none;
     }
+
     .flow-line::before {
       content: "";
       position: absolute;
-      width: 300%; height: 300%;
+      width: 300%;
+      height: 300%;
       background: url('data:image/svg+xml;utf8,\
 <svg xmlns="http://www.w3.org/2000/svg" width="1440" height="320">\
 <path fill="none" stroke="rgba(255,255,255,0.2)" stroke-width="2" d="M0,160 C320,80 640,240 960,160 C1280,80 1600,240 1920,160 L1920,320 L0,320 Z"/>\
@@ -49,38 +54,40 @@
       animation: waveMove 10s linear infinite;
       opacity: 0.25;
     }
+
     @keyframes waveMove {
       from { transform: translateX(0); }
       to { transform: translateX(-50%); }
     }
 
-    /* ===== Titles and text ===== */
+    /* ===== Titles and Text ===== */
     .box-title {
       font-family: 'Great Vibes', cursive;
       font-size: 2.5rem;
       margin-bottom: 2vh;
-      text-align: center;
       text-shadow: 0 0 10px rgba(255,255,255,0.3);
       z-index: 1;
     }
 
-    /* ===== Countdown box ===== */
+    /* ===== Countdown Box ===== */
     .countdown-box {
-      background: rgba(0,0,0,0.6);
-      border: 3px solid rgba(200,50,50,0.9);
+      background: rgba(0, 0, 0, 0.6);
+      border: 3px solid rgba(200, 50, 50, 0.9);
       border-radius: 20px;
       padding: 5vh 5vw;
       text-align: center;
-      box-shadow: 0 10px 25px rgba(0,0,0,0.7);
+      box-shadow: 0 10px 25px rgba(0, 0, 0, 0.7);
       transition: all 0.4s ease;
       width: 90%;
       max-width: 450px;
       z-index: 1;
+      margin: 0 auto 3vh auto;
     }
+
     .countdown-box:hover {
       transform: scale(1.05);
-      box-shadow: 0 0 30px rgba(200,50,50,0.6);
-      border-color: rgba(200,50,50,1);
+      box-shadow: 0 0 30px rgba(200, 50, 50, 0.6);
+      border-color: rgba(200, 50, 50, 1);
     }
 
     .days {
@@ -89,13 +96,14 @@
       font-weight: 700;
       color: #cc3333;
     }
+
     .label {
       font-family: 'Great Vibes', cursive;
       font-size: 4vw;
       opacity: 0.9;
     }
 
-    /* ===== Progress bar section ===== */
+    /* ===== Progress Bar Section ===== */
     .progress-title {
       font-family: 'Great Vibes', cursive;
       font-size: 2rem;
@@ -108,16 +116,17 @@
       width: 90%;
       max-width: 450px;
       height: 20px;
-      background: rgba(255,255,255,0.2);
+      background: rgba(255, 255, 255, 0.2);
       border-radius: 12px;
       overflow: hidden;
       cursor: pointer;
       transition: all 0.3s ease;
-      margin-bottom: 0.5vh;
+      margin: 0 auto 1vh auto;
     }
+
     .progress-container:hover {
       height: 30px;
-      background: rgba(255,255,255,0.1);
+      background: rgba(255, 255, 255, 0.1);
     }
 
     .progress-fill {
@@ -136,6 +145,8 @@
       font-family: 'Great Vibes', cursive;
       font-size: 1rem;
       margin-bottom: 1vh;
+      margin-left: auto;
+      margin-right: auto;
     }
 
     .today-date {
@@ -148,18 +159,23 @@
       opacity: 0;
       transition: opacity 0.3s ease;
       margin-bottom: 4vh;
+      margin-left: auto;
+      margin-right: auto;
     }
+
     .progress-container:hover + .today-date {
       opacity: 1;
     }
 
-    /* ===== Responsive adjustments ===== */
+    /* ===== Responsive Adjustments ===== */
     @media (max-width: 600px) {
       .box-title { font-size: 2rem; }
       .days { font-size: 12vw; }
       .label { font-size: 6vw; }
       .progress-title { font-size: 5vw; }
       .progress-dates { font-size: 3.5vw; }
+      body { text-align: center; justify-content: flex-start; }
+      .countdown-box { margin: 0 auto 3vh auto; }
     }
   </style>
 </head>
@@ -187,7 +203,7 @@
   <div class="today-date" id="today-date"></div>
 
   <script>
-    const totalDays = 92; // Between Oct 15 and Jan 15
+    const totalDays = 92; // total number of days between Oct 15 and Jan 15
 
     function formatDate(date) {
       const options = { day: 'numeric', month: 'short' };
@@ -196,7 +212,7 @@
 
     function updateCountdown() {
       const today = new Date();
-      const endDate = new Date(today.getFullYear(), 0, 15); // Jan 15
+      const endDate = new Date(today.getFullYear(), 0, 15); // January 15
       if (today > endDate) endDate.setFullYear(today.getFullYear() + 1);
 
       const msPerDay = 1000 * 60 * 60 * 24;
@@ -204,14 +220,15 @@
       const daysPassed = Math.max(0, totalDays - daysRemaining);
 
       document.getElementById('days').textContent = daysRemaining;
-      document.getElementById('progress-fill').style.width =
-        (daysPassed / totalDays) * 100 + '%';
-      document.getElementById('today-date').textContent =
-        `Today: ${formatDate(today)}`;
+
+      const percentage = (daysPassed / totalDays) * 100;
+      document.getElementById('progress-fill').style.width = percentage + '%';
+
+      document.getElementById('today-date').textContent = `Today: ${formatDate(today)}`;
     }
 
     updateCountdown();
-    setInterval(updateCountdown, 1000 * 60 * 60); // update hourly
+    setInterval(updateCountdown, 1000 * 60 * 60); // update every hour
   </script>
 </body>
 </html>
