--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <title>Countdown Page</title>
 
   <!-- Optional favicon -->
-  <link rel="icon" type="image/png" href="logo.png">
+  <link rel="icon" type="image/jpg" href="logo.jpg">
 
   <!-- Google Font -->
   <link href="https://fonts.googleapis.com/css2?family=Great+Vibes&display=swap" rel="stylesheet">
@@ -182,14 +182,14 @@
 <body>
   <div class="flow-line"></div>
 
-  <div class="box-title">Countdown Timer</div>
+  <div class="box-title">Forgive me Master! I've been a bad girl</div>
 
   <div class="countdown-box">
     <div class="days" id="days">0</div>
-    <div class="label">Days Remaining</div>
+    <div class="label">Long Days Remaining</div>
   </div>
 
-  <div class="progress-title">Progress toward January 15</div>
+  <div class="progress-title">Your poor Slave is impatiently waiting to be fucked</div>
 
   <div class="progress-container">
     <div class="progress-fill" id="progress-fill"></div>
@@ -232,3 +232,4 @@
   </script>
 </body>
 </html>
+
