--- a/index.html
+++ b/index.html
@@ -182,8 +182,8 @@
 <body>
   <div class="flow-line"></div>
 
-  <div class="box-title">Forgive me Master! I've been a bad girl</div>
-
+  <div class="box-title">Forgive me Master! </div>
+  <div class="box-title">I've been a bad girl..</div>
   <div class="countdown-box">
     <div class="days" id="days">0</div>
     <div class="label">Long Days Remaining</div>
@@ -232,5 +232,6 @@
   </script>
 </body>
 </html>
+
 
 
