--- a/index.html
+++ b/index.html
@@ -189,7 +189,7 @@
     <div class="label">Long Days Remaining</div>
   </div>
 
-  <div class="progress-title">Your poor Slave is impatiently waiting to be fucked</div>
+  <div class="progress-title">Your poor Slave is impatiently waiting to be Fucked</div>
 
   <div class="progress-container">
     <div class="progress-fill" id="progress-fill"></div>
@@ -232,6 +232,7 @@
   </script>
 </body>
 </html>
+
 
 
 
